# 2026-Sampling-Workshop-Tanzania

./: .gitignore  .lintr  Makefile  index.qmd  main.py  package.json  pyproject.toml  tailwind.config.js
course/: .gitignore  README.md  _quarto.yml  index.qmd  references.bib
course/assets/styles/: input.css
course/notebooks/: 10_area_level_models.qmd  11_unit_level_models.qmd  1_getting_started.qmd  2_basic_r.qmd  3_tidyverse.qmd  4_data_visualization.qmd  4b_tabulation.qmd  5_survey_estimates.qmd  6_glmm.qmd  7_area_level_models.qmd  8_unit_level_models.qmd  9_survey_estimates.qmd
